--- a/index.html
+++ b/index.html
@@ -79,20 +79,20 @@ $(document)
           <h2 class="p2">Bienvenue dans voilà ton jardin</h2>
           <p class="text-1">voilà ton jardin est un web platform qui vise a aider nos citoyens de trouver la bonne jardin d'enfant qui repond a leurs besoins </p>
         </div>
-        <div class="block-1">
-          <div class="block-1-shadow">
-            <h2 class="clr-6 p4">Nos Jardins</h2>
-            <div class="box-1"> <a href="#" class="img-border"><img src="images/jardin_x1.jpg" alt=""></a>
+        <div class="block-1 bootstrap-wrapper">
+          <div class="block-1-shadow row ">
+            <h2 class="clr-6 p4 col-md-12">Nos Jardins</h2>
+            <div class=" col-md-6"> <a href="#" class="img-border"><img src="images/jardin_x1.jpg" alt=""></a>
               <p class="text-2">Jardin d'enfant X1</p>
             </div>
-            <div class="box-1 last"> <a href="#" class="img-border"><img src="images/jardin_x2.jpg" alt=""></a>
+            <div class=" last  col-md-6"> <a href="#" class="img-border"><img src="images/jardin_x2.jpg" alt=""></a>
               <p class="text-2">Jardin d'enfant X2</p>
             </div>
             <div class="clear p5"></div>
-            <div class="box-1"> <a href="#" class="img-border"><img src="images/jardin_x3.jpeg" alt=""></a>
+            <div class="  col-md-6"> <a href="#" class="img-border"><img src="images/jardin_x3.jpeg" alt=""></a>
               <p class="text-2">Jardin d'enfant X3</p>
             </div>
-            <div class="box-1 last"> <a href="#" class="img-border"><img src="images/jardin_x4.jpeg" alt=""></a>
+            <div class=" last  col-md-6"> <a href="#" class="img-border"><img src="images/jardin_x4.jpeg" alt=""></a>
               <p class="text-2">Jardin d'enfant X4</p>
             </div>
             <div class="clear"></div>
