--- a/index.html
+++ b/index.html
@@ -96,7 +96,10 @@ $(document)
               <p class="text-2">Jardin d'enfant X4</p>
             </div>
             <div class="clear"></div>
-            <div class="pad-2"> <a href=gallery.html class="link-2">Full Gallery</a> </div>
+            <div class="pad-2" style="
+            display: block;
+            width: 100%;
+        "> <a href="gallery.html" class="link-2">Full Gallery</a> </div>
           </div>
         </div>
         <!--==============================footer=================================-->
