--- a/gallery.html
+++ b/gallery.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Art School | Gallery</title>
+<title>LeBonClub | Nos clubs</title>
 <meta charset="utf-8">
 <link rel="stylesheet" type="text/css" media="screen" href="css/reset.css">
 <link rel="stylesheet" type="text/css" media="screen" href="css/style.css">
@@ -48,7 +48,10 @@ $(document)
 <div class="main">
   <!--==============================header=================================-->
   <header>
-    <h1><a href="index.html"><img src="images/logo.png" alt=""></a></h1>
+      <h1><a href="index.html"><img style="
+        width: 250px;
+        object-fit: contain;
+        height: 140px;" src="images/club.png" alt=""></a></h1>
     <nav>
       <div id="slide">
         <div class="gallery">
@@ -77,20 +80,13 @@ $(document)
   <section id="content">
     <div class="container_12">
       <div class="grid_4 bot-1">
-        <h2 class="top-6 p2">Our Archive</h2>
+        <h2 class="top-6 p2">Categories</h2>
         <ul class="list-1">
-          <li><a href="#">April, 2012</a></li>
-          <li><a href="#">March, 2012</a></li>
-          <li><a href="#">February, 2012</a></li>
-          <li><a href="#">January, 2012</a></li>
-          <li><a href="#">December, 2011</a></li>
-          <li><a href="#">November, 2011</a></li>
-          <li><a href="#">October, 2011</a></li>
-          <li><a href="#">September, 2011</a></li>
-          <li><a href="#">August, 2011</a></li>
-          <li><a href="#">July, 2011</a></li>
-          <li><a href="#">June, 2011</a></li>
-          <li><a href="#">May, 2011</a></li>
+          <li><a href="#">Dessin</a></li>
+          <li><a href="#">Dance</a></li>
+          <li><a href="#">Musique</a></li>
+          <li><a href="#">Loisirs</a></li>
+          <li><a href="#">Autres</a></li>
         </ul>
       </div>
       <div class="grid_8">
@@ -100,19 +96,19 @@ $(document)
             <div class="pag">
               <div class="img-pags">
                 <ul>
-                  <li><a href="#"><span><img src="images/gallery-1.jpg" alt="" class="img-border"> <strong class="text-2">Jennifer, 10 years</strong></span></a></li>
-                  <li><a href="#"><span><img src="images/gallery-2.jpg" alt="" class="img-border"> <strong class="text-2">Sebastian, 14 years</strong></span></a></li>
-                  <li><a href="#"><span><img src="images/gallery-3.jpg" alt="" class="img-border"> <strong class="text-2">Peter, 9 years</strong></span></a></li>
-                  <li><a href="#"><span><img src="images/gallery-4.jpg" alt="" class="img-border"> <strong class="text-2">Samuel, 15 years</strong></span></a></li>
-                  <li><a href="#"><span><img src="images/gallery-5.jpg" alt="" class="img-border"> <strong class="text-2">Martin, 13 years</strong></span></a></li>
-                  <li><a href="#"><span><img src="images/gallery-6.jpg" alt="" class="img-border"> <strong class="text-2">Fiona, 8 years</strong></span></a></li>
-                  <li><a href="#"><span><img src="images/gallery-7.jpg" alt="" class="img-border"> <strong class="text-2">Monica, 7 years</strong></span></a></li>
-                  <li><a href="#"><span><img src="images/gallery-8.jpg" alt="" class="img-border"> <strong class="text-2">Fiona, 8 years</strong></span></a></li>
+                  <li><a href="#"><span><img src="images/gallery-1.jpg" alt="" class="img-border"> <strong class="text-2">Club X1</strong></span></a></li>
+                  <li><a href="#"><span><img src="images/gallery-2.jpg" alt="" class="img-border"> <strong class="text-2">Club X3</strong></span></a></li>
+                  <li><a href="#"><span><img src="images/gallery-3.jpg" alt="" class="img-border"> <strong class="text-2">Club X5</strong></span></a></li>
+                  <li><a href="#"><span><img src="images/gallery-4.jpg" alt="" class="img-border"> <strong class="text-2">Club X7</strong></span></a></li>
+                  <li><a href="#"><span><img src="images/gallery-5.jpg" alt="" class="img-border"> <strong class="text-2">Club X2</strong></span></a></li>
+                  <li><a href="#"><span><img src="images/gallery-6.jpg" alt="" class="img-border"> <strong class="text-2">Club X4</strong></span></a></li>
+                  <li><a href="#"><span><img src="images/gallery-7.jpg" alt="" class="img-border"> <strong class="text-2">Club X6</strong></span></a></li>
+                  <li><a href="#"><span><img src="images/gallery-8.jpg" alt="" class="img-border"> <strong class="text-2">Club X8</strong></span></a></li>
                 </ul>
               </div>
             </div>
             <div class="clear"></div>
-            <div class="pad-2"> <a href="#" class="link-2">Full Gallery</a> </div>
+            <div class="pad-2"> <a href="#" class="link-2">Charger plus</a> </div>
           </div>
         </div>
         <!--==============================footer=================================-->
@@ -131,7 +127,7 @@ $(document)
           width: 250px;
           object-fit: contain;
           height: 80px;
-      " src="images/jar_enf.png" alt=""></a>
+      " src="images/club.png" alt=""></a>
 
 				<p class="footer-links">
 					<a href="index.html" class="link-1">Acceuil</a>
@@ -146,7 +142,7 @@ $(document)
 					
 					<a href="contacts.html">Contacts</a>
 				</p>
-        <p class="footer-company-name">© 2019 voila ton jardin</p>
+        <p class="footer-company-name">© 2019 LeBonClub</p>
         <p>developper et designer par Zayneb et Mabrouka Anizi </p>
 			</div>
 
@@ -166,7 +162,7 @@ $(document)
 
 				<div>
 					<i class="fa fa-envelope"></i>
-					<p><a href="mailto:support@company.com">support@voilatonjardin.com</a></p>
+					<p><a href="mailto:support@company.com">support@LeBonClub.com</a></p>
 				</div>
 
 			</div>
