--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Voila ton Club</title>
+<title>LeBonClub</title>
 <meta charset="utf-8">
 <link rel="stylesheet" type="text/css" media="screen" href="css/reset.css">
 <link rel="stylesheet" type="text/css" media="screen" href="css/style.css">
@@ -79,8 +79,8 @@ $(document)
         <a href="#" class="link-1 top-3">Archives</a> </div>
       <div class="grid_8">
         <div class="pad-1">
-          <h2 class="p2">Bienvenue dans voilà ton Club</h2>
-          <p class="text-1">voilà ton Club est un web platform qui vise a aider nos citoyens de trouver la bonne club d'enfant qui repond a leurs besoins </p>
+          <h2 class="p2">Bienvenue dans LeBonClub</h2>
+          <p class="text-1">LeBonClub est un web platform qui vise a aider nos citoyens de trouver la bonne club d'enfant qui repond a leurs besoins </p>
         </div>
         <div class="block-1 bootstrap-wrapper">
           <div class="block-1-shadow row ">
@@ -136,7 +136,7 @@ $(document)
 					
 					<a href="contacts.html">Contacts</a>
 				</p>
-        <p class="footer-company-name">© 2019 voila ton Club</p>
+        <p class="footer-company-name">© 2019 LeBonClub</p>
         <p>developper et designer par Zayneb et Mabrouka Anizi </p>
 			</div>
 
@@ -156,7 +156,7 @@ $(document)
 
 				<div>
 					<i class="fa fa-envelope"></i>
-					<p><a href="mailto:support@company.com">support@lebonclub.com</a></p>
+					<p><a href="mailto:support@company.com">support@LeBonClub.com</a></p>
 				</div>
 
 			</div>
