--- a/contacts.html
+++ b/contacts.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Art School | Contacts</title>
+<title>LeBonClub | Contacts</title>
 <meta charset="utf-8">
 <link rel="stylesheet" type="text/css" media="screen" href="css/reset.css">
 <link rel="stylesheet" type="text/css" media="screen" href="css/style.css">
@@ -42,7 +42,10 @@ $(document)
 <div class="main">
   <!--==============================header=================================-->
   <header>
-    <h1><a href="index.html"><img src="images/logo.png" alt=""></a></h1>
+      <h1><a href="index.html"><img style="
+        width: 250px;
+        object-fit: contain;
+        height: 140px;" src="images/club.png" alt=""></a></h1>
     <nav>
       <div id="slide">
         <div class="slider">
@@ -132,7 +135,7 @@ $(document)
 					
 					<a href="contacts.html">Contacts</a>
 				</p>
-        <p class="footer-company-name">© 2019 voila ton jardin</p>
+        <p class="footer-company-name">© 2019 LeBonClub</p>
         <p>developper et designer par Zayneb et Mabrouka Anizi </p>
 			</div>
 
@@ -152,7 +155,7 @@ $(document)
 
 				<div>
 					<i class="fa fa-envelope"></i>
-					<p><a href="mailto:support@company.com">support@voilatonjardin.com</a></p>
+					<p><a href="mailto:support@company.com">support@LeBonClub.com</a></p>
 				</div>
 
 			</div>
