--- a/gallery.html
+++ b/gallery.html
@@ -56,8 +56,8 @@ $(document)
       <div id="slide">
         <div class="gallery">
           <ul class="items">
-            <li><img src="images/gallery-big-1.jpg" alt=""></li>
             <li><img src="images/gallery-big-2.jpg" alt=""></li>
+            <li><img src="images/act1.jpeg" style="width:920px;height:429px;" alt=""></li>
             <li><img src="images/gallery-big-3.jpg" alt=""></li>
             <li><img src="images/gallery-big-4.jpg" alt=""></li>
             <li><img src="images/gallery-big-5.jpg" alt=""></li>
