--- a/contacts.html
+++ b/contacts.html
@@ -120,7 +120,7 @@ $(document)
           width: 250px;
           object-fit: contain;
           height: 80px;
-      " src="images/jar_enf.png" alt=""></a>
+      " src="images/club.png" alt=""></a>
 
 				<p class="footer-links">
 					<a href="index.html" class="link-1">Acceuil</a>
