--- a/formulaire.html
+++ b/formulaire.html
@@ -2,14 +2,13 @@
 <html lang="en">
 
 <head>
-    <title>Art School | Contacts</title>
+    <title>Art School | Form</title>
     <meta charset="utf-8">
 
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css"
           rel="stylesheet"
           id="bootstrap-css">
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-    <link href='http://fonts.googleapis.com/css?family=Cabin+Sketch:400,700'
+     <link href='http://fonts.googleapis.com/css?family=Cabin+Sketch:400,700'
           rel='stylesheet'
           type='text/css'>
     <link rel="stylesheet"
@@ -92,7 +91,7 @@
                            class="clr-2">A propos</a></li>
                     <li><a href="schedule.html"
                            class="clr-3">Planning</a></li>
-                    <li><a href="gallery.html"
+                    <li><a href="gallery.php"
                            class="clr-4">Nos Clubs</a></li>
                     <li><a href="contacts.html"
                            class="clr-5">Contacts</a></li>
