--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ $(document)
         <li class="current"><a href="index.html" class="clr-1">Acceuil</a></li>
         <li><a href="about.html" class="clr-2">A propos</a></li>
         <li><a href="schedule.html" class="clr-3">Planning</a></li>
-        <li><a href="gallery.html" class="clr-4">Nos Clubs</a></li>
+        <li><a href="gallery.php" class="clr-4">Nos Clubs</a></li>
         <li><a href="contacts.html" class="clr-5">Contacts</a></li>
       </ul>
     </nav>
@@ -101,8 +101,8 @@ $(document)
             <div class="clear"></div>
             <div class="pad-2" style="
             display: block;
-            width: 100%;
-        "> <a href="gallery.html" class="link-2">Voir plus</a> </div>
+            width: 100%;">
+            <a href="gallery.html" class="link-2">Voir plus</a> </div>
           </div>
         </div>
         <!--==============================footer=================================-->
