--- a/schedule.html
+++ b/schedule.html
@@ -60,7 +60,7 @@ $(document)
         <li><a href="index.html" class="clr-1">Acceuil</a></li>
         <li><a href="about.html" class="clr-2">A propos</a></li>
         <li class="current"><a href="schedule.html" class="clr-3">planning</a></li>
-        <li><a href="gallery.html" class="clr-4">Nos clubs</a></li>
+        <li><a href="gallery.php" class="clr-4">Nos clubs</a></li>
         <li><a href="contacts.html" class="clr-5">Contacts</a></li>
       </ul>
     </nav>
