--- a/contacts.html
+++ b/contacts.html
@@ -60,7 +60,7 @@ $(document)
         <li><a href="index.html" class="clr-1">Acceuil</a></li>
         <li><a href="about.html" class="clr-2">A propos</a></li>
         <li><a href="schedule.html" class="clr-3">Planning</a></li>
-        <li><a href="gallery.html" class="clr-4">Nos clubs</a></li>
+        <li><a href="gallery.php" class="clr-4">Nos clubs</a></li>
         <li class="current"><a href="contacts.html" class="clr-5">Contacts</a></li>
       </ul>
     </nav>
@@ -71,13 +71,13 @@ $(document)
       <div class="grid_4 bot-1">
         <h2 class="top-6">Contact Us</h2>
         <div class="map">
-          <iframe src="http://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Brooklyn,+New+York,+NY,+United+States&amp;aq=0&amp;sll=37.0625,-95.677068&amp;sspn=61.282355,146.513672&amp;ie=UTF8&amp;hq=&amp;hnear=Brooklyn,+Kings,+New+York&amp;ll=40.649974,-73.950005&amp;spn=0.01628,0.025663&amp;z=14&amp;iwloc=A&amp;output=embed"></iframe>
+          <iframe src="http://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Rue Salem Bchir- Derrière la gare, 5000 Monastir, Tunisia، Monastir&amp;aq=0&amp;sll=36.839474,-7.27763,19&amp;sspn=61.282355,146.513672&amp;ie=UTF8&amp;hq=&amp;hnear=Brooklyn,+Kings,+New+York&amp;ll=40.649974,-73.950005&amp;spn=0.01628,0.025663&amp;z=19&amp;iwloc=A&amp;output=embed"></iframe>
         </div>
         <dl>
-          <dt>8901 Marmora Road, <br>
-            Glasgow, D04 89GR.</dt>
-          <dd><span>Telephone: </span>+1 800 603 6035</dd>
-          <dd><span>E-mail: </span><a href="#" class="link">mail@demolink.org</a></dd>
+          <dt>Rue Salem Bchir- Derrière la gare<br>
+            5000 Monastir, Tunisia، Monastir</dt>
+          <dd><span>Telephone: </span>+216 55 555 555</dd>
+          <dd><span>E-mail: </span><a href="#" class="link">support@LeBonClub.com</a></dd>
         </dl>
       </div>
       <div class="grid_8">
@@ -86,20 +86,23 @@ $(document)
             <h2 class="clr-6">Contact Form</h2>
             <form id="form" method="post" action="#">
               <fieldset>
-                <label><strong>Name:</strong>
+                <label><strong>Nom:</strong>
                   <input type="text" value="">
                   <strong class="clear"></strong></label>
+                  <label><strong>Prenom:</strong>
+                    <input type="text" value="">
+                    <strong class="clear"></strong></label>
                 <label><strong>Email:</strong>
                   <input type="text" value="">
                   <strong class="clear"></strong></label>
-                <label><strong>Phone:</strong>
+                <label><strong>TEL:</strong>
                   <input type="text" value="">
                   <strong class="clear"></strong></label>
                 <label><strong>Message:</strong>
                   <textarea></textarea>
                   <strong class="clear"></strong></label>
                 <strong class="clear"></strong>
-                <div class="btns pad-2"><a href="#" class="link-2">Clear</a><a href="#" class="link-2">Send</a></div>
+                <div class="btns pad-2"><a href="#" class="link-2">Supprimer</a><a href="#" class="link-2">Envoyer</a></div>
               </fieldset>
             </form>
           </div>
