WTF just happen

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
     <!--==============================header=================================-->
     <header>
       <h1><a href="index.html"><img style="
-      width: 250px;
+      width: 280px;
       object-fit: contain;
-      height: 140px;" src="images/club.png" alt=""></a></h1>
+      height: 160px;" src="images/club.png" alt=""></a></h1>
       <nav>
         <div id="slide">
           <div class="slider">
@@ -90,18 +90,22 @@
           <div class="block-1 bootstrap-wrapper">
             <div class="block-1-shadow row ">
               <h2 class="clr-6 p4 col-md-12">Nos Clubs</h2>
-              <div class=" col-md-6"> <a href="#" class="img-border"><img src="images/jardin_x1.jpg" alt=""></a>
-                <p class="text-2">Club d'enfant X1</p>
+              <div class=" col-md-6"> <a class="img-border"><img src="images/han_kids.jpg"
+                    alt=""></a>
+                <p class="text-2">Hannibal kids</p>
               </div>
-              <div class=" last  col-md-6"> <a href="#" class="img-border"><img src="images/jardin_x2.jpg" alt=""></a>
-                <p class="text-2">Club d'enfant X2</p>
+              <div class=" last  col-md-6"> <a class="img-border"><img src="images/tarkiz.jpg"
+                    alt=""></a>
+                <p class="text-2">Tarkiz</p>
               </div>
               <div class="clear p5"></div>
-              <div class="  col-md-6"> <a href="#" class="img-border"><img src="images/jardin_x3.jpeg" alt=""></a>
-                <p class="text-2">Club d'enfant X3</p>
+              <div class="  col-md-6"> <a class="img-border"><img src="images/corniche.jpg"
+                    alt=""></a>
+                <p class="text-2">Corniche Club enfants</p>
               </div>
-              <div class=" last  col-md-6"> <a href="#" class="img-border"><img src="images/jardin_x4.jpeg" alt=""></a>
-                <p class="text-2">Club d'enfant X4</p>
+              <div class=" last  col-md-6"> <a class="img-border"><img src="images/briko_kid.jpg"
+                    alt=""></a>
+                <p class="text-2">Brico Kid</p>
               </div>
               <div class="clear"></div>
               <div class="pad-2" style="
