--- a/schedule.html
+++ b/schedule.html
@@ -45,9 +45,9 @@
     <!--==============================header=================================-->
     <header>
       <h1><a href="index.html"><img style="
-        width: 250px;
+        width: 280px;
         object-fit: contain;
-        height: 140px;" src="images/club.png" alt=""></a></h1>
+        height: 160px;" src="images/club.png" alt=""></a></h1>
       <nav>
         <div id="slide">
           <div class="slider">
@@ -62,7 +62,7 @@
         <ul class="menu">
           <li><a href="index.html" class="clr-1">Acceuil</a></li>
           <li><a href="about.html" class="clr-2">A propos</a></li>
-          <li class="current"><a href="schedule.html" class="clr-3">planning</a></li>
+          <li class="current"><a href="schedule.html" class="clr-3">Events</a></li>
           <li><a href="gallery.php" class="clr-4">Nos clubs</a></li>
           <li><a href="contacts.html" class="clr-5">Contacts</a></li>
         </ul>
@@ -72,68 +72,59 @@
     <section id="content">
       <div class="container_12">
         <div class="grid_4 bot-1">
-          <h2 class="top-6 p6">A propos de l'horaire de travail</h2>
-          <p class="clr-7 p7"><strong>At vero eos et accusam et justo duo dolores et ea rebum.</strong></p>
-          <p class="p7">Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor. Loremsum dolor sit
-            amet, consetetur sadipscing elitr, sed diam nonumy.</p>
-          <p>Eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam
-            et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum <br>
-            dolor sit amet <a href="#" class="link">More...</a></p>
+          <h2 class="top-6 p6">A propos d'evenement </h2>
+          <p class="clr-7 p7"><strong>pour mieux integrer nos clients avec ses jardins et avoir une bonne interaction 
+            entre les gens qui cherchenet des nouveaux club d'enfants on a listé  tout les evenements prevus de nos clubs d'enfants.</p>
+          <p class="clr-7 p7">ainsi nous offrons a nos clients un help desk pour le guider et supporter lors de leurs procedure de recherche ou de reservation dans un evenement  <a href="contacts.html" class="link">More...</a></p></strong></p>
         </div>
         <div class="grid_8">
           <div class="block-1 top-5">
             <div class="block-1-shadow">
-              <h2 class="clr-6 p6">Horaire</h2>
+              <h2 class="clr-6 p6">horaire help desk</h2>
               <table class="table">
                 <tr>
-                  <th>Monday</th>
-                  <th>Wednesday</th>
-                  <th>Friday</th>
-                  <th class="last">Saturday</th>
+                  <th>Lundi</th>
+                  <th>Mercredi</th>
+                  <th>Vendredi</th>
+                  <th class="last">Samedi</th>
                 </tr>
                 <tr>
-                  <td><span>11:00</span><span class="clr-4">Nam liber tempor</span><span>Peter Stanton</span></td>
-                  <td><span>11:00</span><span class="clr-4">Nam liber tempor</span><span>Peter Stanton</span></td>
-                  <td><span>11:00</span><span class="clr-4">Nam liber tempor</span><span>Peter Stanton</span></td>
-                  <td><span>11:00</span><span class="clr-4">Nam liber tempor</span><span>Peter Stanton</span></td>
+                  <td><span>09:00</span><span class="clr-4">ouverture</span><span>Peter Stanton</span></td>
+                  <td><span>09:00</span><span class="clr-4">ouverture</span><span>Jesica Murray</span></td>
+                  <td><span>09:00</span><span class="clr-4">ouverture</span><span>Peter Stanton</span></td>
+                  <td><span>09:00</span><span class="clr-4">ouverture</span><span>Jesica Murray</span></td>
                 </tr>
                 <tr>
-                  <td><span>13:00</span><span class="clr-4">Lorem ipsum</span><span>Helen Perton</span></td>
-                  <td><span>13:00</span><span class="clr-4">Lorem ipsum</span><span>Helen Perton</span></td>
-                  <td><span>13:00</span><span class="clr-4">Lorem ipsum</span><span>Helen Perton</span></td>
-                  <td><span>13:00</span><span class="clr-4">Lorem ipsum</span><span>Helen Perton</span></td>
-                </tr>
-                <tr>
-                  <td><span>16:00</span><span class="clr-4">Dolor sit amet</span><span>Jesica Murray</span></td>
-                  <td><span>16:00</span><span class="clr-4">Dolor sit amet</span><span>Jesica Murray</span></td>
-                  <td><span>16:00</span><span class="clr-4">Dolor sit amet</span><span>Jesica Murray</span></td>
-                  <td><span>16:00</span><span class="clr-4">Dolor sit amet</span><span>Jesica Murray</span></td>
+                  <td><span class="clr-4">fermeture</span><span>16:00</span></td>
+                  <td><span class="clr-4">fermeture</span><span>16:00</span></td>
+                  <td><span class="clr-4">fermeture</span><span>16:00</span></td>
+                  <td><span class="clr-4">fermeture</span><span>16:00</span></td>
                 </tr>
               </table>
-              <h2 class="clr-6 p6">Events Schedule</h2>
+              <h2 class="clr-6 p6">Evenement prevus</h2>
               <div class="wrap">
                 <div class="box-2">
                   <div class="p4">
-                    <p><strong>April 10, 2012</strong></p>
+                    <p><strong>septembre 10, 2019</strong></p>
                     <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel
-                      illum dolore <a href="#" class="link">More...</a></p>
+                      illum dolore </p>
                   </div>
                   <div>
-                    <p><strong>March 22, 2012</strong></p>
+                    <p><strong>septembre 22, 2019</strong></p>
                     <p>Teugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent
-                      luptatum <a href="#" class="link">More...</a></p>
+                      luptatum </p>
                   </div>
                 </div>
                 <div class="box-2 last">
                   <div class="p4">
-                    <p><strong>April 04, 2012</strong></p>
-                    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
-                      ut labore <a href="#" class="link">More...</a></p>
+                    <p><strong>octobre 04, 2019</strong></p>
+                    <p>Lorem ipsum fermeture, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
+                      ut labore </p>
                   </div>
                   <div>
-                    <p><strong>March 14, 2012</strong></p>
+                    <p><strong>octobre 14, 2019</strong></p>
                     <p>At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
-                      takimata sanctus <a href="#" class="link">More...</a></p>
+                      takimata sanctus </p>
                   </div>
                 </div>
               </div>
